--- a/generator-swdp-react/generators/react-code/templates/tsconfig.json
+++ b/generator-swdp-react/generators/react-code/templates/tsconfig.json
@@ -5,7 +5,7 @@
     "lib": ["DOM", "DOM.Iterable", "ESNext"],
     "allowJs": false,
     "skipLibCheck": true,
-    "esModuleInterop": true,
+    "esModuleInterop": false,
     "allowSyntheticDefaultImports": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
@@ -16,6 +16,6 @@
     "noEmit": true,
     "jsx": "react-jsx"
   },
-  "include": ["templates/src"],
+  "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
