--- a/generator-swdp-react/generators/react-code/templates/tsconfig.node.json
+++ b/generator-swdp-react/generators/react-code/templates/tsconfig.node.json
@@ -5,5 +5,5 @@
     "moduleResolution": "Node",
     "allowSyntheticDefaultImports": true
   },
-  "include": ["src/config/vite.config.ts"]
+  "include": ["vite.config.ts"]
 }
