--- a/generator-swdp-react-ts/generators/react-base-code/templates/package.json
+++ b/generator-swdp-react-ts/generators/react-base-code/templates/package.json
@@ -1,5 +1,7 @@
 {
-  "name": "react-ts-vite",
+  "name": "<%= project.component_name %>",
+  "description": "<%= project.description %>",
+  "author": "<%= project.author %>",
   "private": true,
   "version": "0.0.0",
   "type": "module",
