--- a/react-ts-vite/package.json
+++ b/react-ts-vite/package.json
@@ -5,8 +5,9 @@
   "type": "module",
   "scripts": {
     "start": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
+    "build": "tsc -p tsconfig.prod.json && vite build",
+    "preview": "vite preview",
+    "test": "NODE_ENV=test jest"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -15,9 +16,13 @@
     "react-router-dom": "^6.10.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
+    "jest": "^29.5.0",
     "typescript": "^4.9.3",
     "vite": "^4.2.0"
   }
