--- a/react-ts-vite/package.json
+++ b/react-ts-vite/package.json
@@ -7,7 +7,8 @@
     "start": "vite",
     "build": "tsc -p tsconfig.prod.json && vite build",
     "preview": "vite preview",
-    "test": "NODE_ENV=test jest"
+    "test": "jest --env=jsdom --verbose --silent",
+    "test:dev": "jest"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -16,14 +17,42 @@
     "react-router-dom": "^6.10.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.21.4",
+    "@babel/preset-react": "^7.18.6",
+    "@babel/preset-typescript": "^7.21.4",
+    "@jest/globals": "^29.5.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
+    "@types/jest": "^29.5.1",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^29.5.0",
+    "ts-jest": "^29.1.0",
+    "jest-environment-jsdom": "^29.3.1",
     "typescript": "^4.9.3",
     "vite": "^4.2.0"
+  },
+  "jest": {
+    "collectCoverage": true,
+    "transform": {
+      "^.+\\.tsx$": "ts-jest",
+      "^.+\\.ts$": "ts-jest",
+      "^.+\\.svg$": "<rootDir>/svgTransform.cjs"
+    },
+    "moduleNameMapper": {
+      "\\.(css|less|scss|sass)$": "identity-obj-proxy"
+    },
+    "moduleDirectories": [
+      "node_modules",
+      "src"
+    ],
+    "coveragePathIgnorePatterns": [
+      "<rootDir>/src/assets/",
+      "./assets/"
+    ],
+    "testEnvironment": "jsdom"
   }
 }
