--- a/generator-swdp-react-ts/package.json
+++ b/generator-swdp-react-ts/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.3.6",
     "yeoman-generator": "^5.8.0"
   },
   "devDependencies": {
