--- a/react-ts-vite/package.json
+++ b/react-ts-vite/package.json
@@ -11,6 +11,7 @@
     "test:dev": "jest"
   },
   "dependencies": {
+    "axios": "^1.3.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.4",
@@ -30,8 +31,8 @@
     "@vitejs/plugin-react": "^3.1.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.5.0",
-    "ts-jest": "^29.1.0",
     "jest-environment-jsdom": "^29.3.1",
+    "ts-jest": "^29.1.0",
     "typescript": "^4.9.3",
     "vite": "^4.2.0"
   },
