--- a/generator-swdp-react-ts/package.json
+++ b/generator-swdp-react-ts/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@types/yeoman-generator": "^5.2.11",
     "eslint": "^8.37.0",
+    "ts-morph": "^18.0.0",
     "typescript": "^5.0.3"
   }
 }
