--- a/generator-swdp-react-ts/package.json
+++ b/generator-swdp-react-ts/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.3.6",
+    "node-html-parser": "^6.1.5",
     "yeoman-generator": "^5.8.0"
   },
   "devDependencies": {
