--- a/react-ts-vite/package.json
+++ b/react-ts-vite/package.json
@@ -11,6 +11,7 @@
     "test:dev": "jest"
   },
   "dependencies": {
+    "@axa-fr/react-oidc": "^6.9.2",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.3.6",
     "react": "^18.2.0",
