--- a/react-ts-vite/package.json
+++ b/react-ts-vite/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@axa-fr/react-oidc": "^6.9.2",
     "@reduxjs/toolkit": "^1.9.5",
+    "antd": "^5.4.7",
     "axios": "^1.3.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
