--- a/react-ts-vite/package.json
+++ b/react-ts-vite/package.json
@@ -12,6 +12,9 @@
   },
   "dependencies": {
     "@axa-fr/react-oidc": "^6.9.2",
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.13.0",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.3.6",
     "react": "^18.2.0",
