--- a/generator-swdp-react-ts/package.json
+++ b/generator-swdp-react-ts/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/react": "^18.2.6",
     "axios": "^1.3.6",
     "node-html-parser": "^6.1.5",
     "yeoman-generator": "^5.8.0"
