--- a/react-ts-vite/package.json
+++ b/react-ts-vite/package.json
@@ -14,6 +14,7 @@
     "@axa-fr/react-oidc": "^6.9.2",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.0",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.3.6",
